--- a/assets/style.css
+++ b/assets/style.css
@@ -1,14 +1,38 @@
-body {
+body{
     background-color: #D1E9F6;
 }
 
+.container {
+    width: 100%;
+}
+
 .search-form {
-    display: flex;
-    justify-content: center;
-    gap: 15px
+    padding-left: 120px;
+    gap: 5px
+}
+
+.search-label{
+    font-size: 26px;
+}
+
+.search-input {
+    font-size: 18px;
+    width: 30%;
 }
 
 .button {
     background-color:#F1D3CE;
+    font-size: 18px;
     border-radius: 15%;
+}
+
+#suggestion {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-left: 12%;
+}
+
+.suggestion:hover {
+    color: red;
 }
