--- a/assets/style.css
+++ b/assets/style.css
@@ -1,5 +1,13 @@
-body{
-    background-color: #D1E9F6;
+*{
+    margin: 0;
+    padding: 0;
+}
+
+.canvas{
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 0;
 }
 
 .container {
@@ -7,8 +15,13 @@ body{
 }
 
 .search-form {
-    padding-left: 120px;
-    gap: 5px
+    margin-top: 4rem;
+    display: flex;
+    justify-content: center;
+    gap: 5px;
+    position: relative;
+    z-index: 1;
+    
 }
 
 .search-label{
@@ -31,6 +44,8 @@ body{
     flex-direction: column;
     align-items: center;
     margin-left: 12%;
+    position: relative;
+    z-index: 1;
 }
 
 .suggestion:hover {
